login all api integration

--- a/gold-admin-frontend/src/app/views/pages/auth/forgot-password/forgot-password.component.html
+++ b/gold-admin-frontend/src/app/views/pages/auth/forgot-password/forgot-password.component.html
@@ -1,3 +1,4 @@
+<kt-toastr #toastr></kt-toastr>
 <!--begin::Body-->
 <div class="kt-login__body">
 	<!--begin::Signin-->
@@ -6,7 +7,7 @@
 			<p class="text-center forgot-title">Forget Password?</p>
 		</div>
 		<div class="text-center forgot-sub-title text-gray">
-			Enter Your Register Email ID
+			Enter Your Register Mobile No.
 		</div>
 		<kt-auth-notice></kt-auth-notice>
 
@@ -14,8 +15,8 @@
 			<div class="form-group">
 				<!-- <mat-form-field>  -->
 				<!-- <mat-label>{{ 'AUTH.INPUT.EMAIL' | translate }}</mat-label> -->
-				<input class="login-form-input" type="text" placeholder="{{ 'AUTH.INPUT.EMAIL' | translate }}"
-					formControlName="email" autocomplete="off" />
+				<input class="login-form-input" type="text" placeholder="Mobile No." formControlName="email"
+					autocomplete="off" numbersOnly />
 				<mat-error *ngIf="isControlHasError('email','required')">
 					<strong>{{ 'AUTH.VALIDATION.REQUIRED_FIELD' | translate }}</strong>
 				</mat-error>
@@ -34,8 +35,7 @@
 			<div class="kt-login__actions">
 				<!-- <button routerLink="/auth/login" [disabled]="loading" id="kt_login_signup_cancel"
 					class="btn btn-secondary btn-elevate kt-login__btn-secondary">{{ 'AUTH.GENERAL.BACK_BUTTON' | translate }}</button> -->
-				<button (click)="submit()" id="kt_login_signin_submit"
-					class="btn btn-sign-otp w-100"
+				<button (click)="submit()" id="kt_login_signin_submit" class="btn btn-sign-otp w-100"
 					[ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}">{{ 'AUTH.GENERAL.SUBMIT_BUTTON' | translate }}</button>
 			</div>
 			<!--end::Action-->
