bhushan: API integration for add, get Leads

--- a/gold-admin-frontend/src/app/views/pages/customer-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-management/add-lead/add-lead.component.html
@@ -108,6 +108,8 @@
                                         <mat-error *ngIf="controls.otp.errors?.pattern && controls.otp.touched">Invalid
                                             Input
                                         </mat-error>
+                                        <mat-hint class="kt-pointer" (click)="resendOTP()">Didn't get an OTP?
+                                            <strong>Resend</strong></mat-hint>
                                         <!-- </mat-form-field> -->
                                     </div>
 
