--- a/gold-admin-frontend/src/app/views/pages/customer-management/customer-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-management/customer-management.component.html
@@ -9,42 +9,52 @@
                 <ng-container matColumnDef="fullName">
                     <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Full Name</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.fullName}}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.firstName | titlecase}}&nbsp;{{role.lastName | titlecase}}
+                    </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="mobile">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Mobile Number</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.mobile}}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.mobileNumber}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="pan">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>PAN Number</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.pan | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.panCardNumber | uppercase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="state">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>State</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.state | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.state.name | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="city">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>City</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.city | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.city.name | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="date">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.date | date}}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.updatedAt | date:'mediumDate'}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="time">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Time</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.time | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.updatedAt | date:'shortTime'}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="status">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.status | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let role">
+                        <span class="text-success" *ngIf="role.status.id == '1'">
+                            {{role.status.statusName | titlecase}} </span>
+                        <span class="text-warning" *ngIf="role.status.id == '2'">
+                            {{role.status.statusName | titlecase}}
+                        </span>
+                        <span class="text-danger" *ngIf="role.status.id == '3'">
+                            {{role.status.statusName | titlecase}}
+                        </span>
+                    </mat-cell>
                 </ng-container>
 
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
