--- a/gold-admin-frontend/src/app/views/pages/auth/change-password/change-password.component.html
+++ b/gold-admin-frontend/src/app/views/pages/auth/change-password/change-password.component.html
@@ -9,98 +9,49 @@
 
 		<!-- <kt-auth-notice></kt-auth-notice> -->
 
-		<form class="kt-login__form kt-form" [formGroup]="changePasswordForm" autocomplete="off">
-			<!-- <div class="form-group">
-				<mat-form-field>
-					<mat-label>Fullname</mat-label>
-					<input matInput type="text" placeholder="Fullname" formControlName="fullname"/>
-					<mat-error *ngIf="isControlHasError('fullname','required')">
-						<strong>{{ 'AUTH.VALIDATION.REQUIRED_FIELD' | translate }}</strong>
-					</mat-error>
-					<mat-error *ngIf="isControlHasError('fullname','minlength')">
-						<strong>{{ 'AUTH.VALIDATION.MIN_LENGTH_FIELD' | translate }} 3</strong>
-					</mat-error>
-					<mat-error *ngIf="isControlHasError('fullname','maxlength')">
-						<strong>{{ 'AUTH.VALIDATION.MAX_LENGTH_FIELD' | translate }} 100</strong>
-					</mat-error>
-				</mat-form-field>
-			</div> -->
-			<!-- <div class="form-group">
-				<mat-form-field>
-					<mat-label>{{ 'AUTH.INPUT.EMAIL' | translate }}</mat-label>
-					<input matInput type="email" placeholder="{{ 'AUTH.INPUT.EMAIL' | translate }}" formControlName="email" autocomplete="off"/>
-					<mat-error *ngIf="isControlHasError('email','required')">
-						<strong>{{ 'AUTH.VALIDATION.REQUIRED_FIELD' | translate }}</strong>
-					</mat-error>
-					<mat-error *ngIf="isControlHasError('email','email')">
-						<strong>{{ 'AUTH.VALIDATION.INVALID_FIELD' | translate }}</strong>
-					</mat-error>
-					<mat-error *ngIf="isControlHasError('email','minlength')">
-						<strong>{{ 'AUTH.VALIDATION.MIN_LENGTH_FIELD' | translate }} 3</strong>
-					</mat-error>
-					<mat-error *ngIf="isControlHasError('email','maxlength')">
-						<strong>{{ 'AUTH.VALIDATION.MAX_LENGTH_FIELD' | translate }} 320</strong>
-					</mat-error>
-				</mat-form-field>
-			</div> -->
-			<!-- <div class="form-group">
-				<mat-form-field>
-					<mat-label>Username</mat-label>
-					<input matInput type="text" placeholder="Username" formControlName="username"/>
-					<mat-error *ngIf="isControlHasError('username','required')">
-						<strong>{{ 'AUTH.VALIDATION.REQUIRED_FIELD' | translate }}</strong>
-					</mat-error>
-					<mat-error *ngIf="isControlHasError('username','minlength')">
-						<strong>{{ 'AUTH.VALIDATION.MIN_LENGTH_FIELD' | translate }} 3</strong>
-					</mat-error>
-					<mat-error *ngIf="isControlHasError('username','maxlength')">
-						<strong>{{ 'AUTH.VALIDATION.MAX_LENGTH_FIELD' | translate }} 100</strong>
-					</mat-error>
-				</mat-form-field>
-			</div> -->
-			<div>
-				<!-- <mat-form-field> -->
-				<input class="login-form-input" type="password" placeholder="{{ 'AUTH.INPUT.PASSWORD' | translate }}"
-					formControlName="password" autocomplete="off" />
-				<mat-error *ngIf="isControlHasError('password','required')">
-					<strong>{{ 'AUTH.VALIDATION.REQUIRED_FIELD' | translate }}</strong>
+		<form autocomplete="off" class="kt-form" [formGroup]="changePasswordForm">
+			<!-- <mat-form-field class="w-100">
+					<mat-label>New Password</mat-label> -->
+			<input class="login-form-input" placeholder="New Password" type="password" formControlName="password">
+			<div *ngIf="controls.password.invalid && controls.password.touched">
+				<mat-error *ngIf="controls.password.errors?.required">
+					<strong>Enter New Password</strong>
 				</mat-error>
-				<mat-error *ngIf="isControlHasError('password','minlength')">
-					<strong>{{ 'AUTH.VALIDATION.MIN_LENGTH_FIELD' | translate }} 3</strong>
+				<mat-error *ngIf="controls.password.errors?.minlength">
+					<strong>Minimum field length 8</strong>
 				</mat-error>
-				<mat-error *ngIf="isControlHasError('password','maxlength')">
-					<strong>{{ 'AUTH.VALIDATION.MAX_LENGTH_FIELD' | translate }} 100</strong>
+				<mat-error *ngIf="controls.password.errors?.maxlength">
+					<strong>Maximum field length 100</strong>
 				</mat-error>
-				<!-- </mat-form-field> -->
 			</div>
+			<!-- </mat-form-field> -->
+			<!-- <mat-form-field class="w-100">
+					<mat-label>Confirm Password</mat-label> -->
 			<div class="kt-margin-t-10 kt-margin-b-10">
-				<!-- <mat-form-field>
-					<mat-label>{{ 'AUTH.INPUT.CONFIRM_PASSWORD' | translate }}</mat-label> -->
-				<input class="login-form-input" type="password"
-					placeholder="{{ 'AUTH.INPUT.CONFIRM_PASSWORD' | translate }}" formControlName="confirmPassword"
-					autocomplete="off" />
-				<mat-error *ngIf="isControlHasError('confirmPassword','required')">
-					<strong>{{ 'AUTH.VALIDATION.REQUIRED_FIELD' | translate }}</strong>
-				</mat-error>
-				<mat-error *ngIf="isControlHasError('confirmPassword','minlength')">
-					<strong>{{ 'AUTH.VALIDATION.MIN_LENGTH_FIELD' | translate }} 3</strong>
-				</mat-error>
-				<mat-error *ngIf="isControlHasError('confirmPassword','maxlength')">
-					<strong>{{ 'AUTH.VALIDATION.MAX_LENGTH_FIELD' | translate }} 100</strong>
-				</mat-error>
-				<mat-error
-					*ngIf="changePasswordForm.get('confirmPassword').errors && changePasswordForm.get('confirmPassword').errors.ConfirmPassword">
-					<strong>Passsword and ConfirmPassword didn't match.</strong>
-				</mat-error>
+
+				<input class="login-form-input" placeholder="Confirm Password" type="password"
+					formControlName="confirmPassword">
+				<div *ngIf="controls.confirmPassword.invalid && controls.confirmPassword.touched">
+					<mat-error *ngIf="controls.confirmPassword.errors?.required">
+						<strong>Enter Confirm Password</strong>
+					</mat-error>
+					<mat-error *ngIf="controls.confirmPassword.errors?.minlength">
+						<strong>Minimum field length 8</strong>
+					</mat-error>
+					<mat-error *ngIf="controls.confirmPassword.errors?.maxlength">
+						<strong>Maximum field length 100</strong>
+					</mat-error>
+					<mat-error
+						*ngIf="changePasswordForm.get('confirmPassword').errors && changePasswordForm.get('confirmPassword').errors.ConfirmPassword">
+						<strong>Passsword and ConfirmPassword didn't match.</strong>
+					</mat-error>
+				</div>
 				<!-- </mat-form-field> -->
 			</div>
-
-			<!--begin::Action-->
 			<div class="kt-login__actions">
 				<button (click)="submit()" id="kt_login_signin_submit" class="btn btn-login w-100"
 					[ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}">{{ 'AUTH.GENERAL.SUBMIT_BUTTON' | translate }}</button>
 			</div>
-			<!--end::Action-->
 		</form>
 	</div>
 </div>
