--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.html
@@ -1,5 +1,5 @@
 <kt-portlet>
-    <kt-portlet-header [title]="'Upload Banner'"></kt-portlet-header>
+    <kt-portlet-header [title]="'Upload Lender Banner'"></kt-portlet-header>
     <kt-portlet-body>
         <div class="row">
             <div class="col-4 kt-padding-10" *ngFor="let image of images;index as idx">
