--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.scss
@@ -1,6 +1,6 @@
 :host {
     .img-add {
-        background   : #F0F8FB;
+        background   : #f0f8fc;
         height       : 100%;
         width        : 75%;
         border       : transparent;
@@ -22,6 +22,6 @@
 
     .border-radius {
         border       : transparent;
-        border-radius: 20px;
+        border-radius: 20px !important;
     }
 }
