--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -1,3 +1,3 @@
 <button mat-raised-button class="filter">
-    <img src="../../../../../assets/media/icons/svg/Text/Filter.svg" alt="">
+    <img src="../../../../../assets/media/icons/svg/General/filter.svg" alt="" height="20" width="20">
   </button>
