--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.scss
@@ -1,5 +1,7 @@
 :host{
     .filter{
         background-color: #454D67 !important;
+        height: 35px !important;
+        width: 35px !important;
     }
 }
