--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -147,9 +147,9 @@ input[type=number] {
 }
 
 // mat-table
-.mat-table__wrapper {
-	overflow-x: unset !important;
-}
+// .mat-table__wrapper {
+// 	overflow: unset !important;
+// }
 
 // mat tab
 .mat-tab-label,
