--- a/gold-admin-frontend/src/app/views/pages/apps/e-commerce/products/_subs/remarks/remarks-list/remarks-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/apps/e-commerce/products/_subs/remarks/remarks-list/remarks-list.component.html
@@ -265,6 +265,6 @@
 <!-- start: BOTTOM -->
 <div class="mat-table__bottom">
 	<mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
-	<mat-paginator [pageSize]="5" [pageSizeOptions]="[3, 5, 10]" [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>
+	<mat-paginator [pageSize]="5" [pageSizeOptions]="[10,25,50,100]" [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>
 </div>
 <!-- end: BOTTOM -->
