--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
@@ -2,19 +2,35 @@
     <kt-portlet-header [title]="'Upload Offer'"></kt-portlet-header>
     <kt-portlet-body>
         <div class="row">
-            <div class="col-4" *ngFor="let image of images;index as idx">
+            <div class="col-3 font-weight-bold text-color d-flex align-items-center" placeholder="">Upload Gold Rate
+            </div>
+            <div class="col-6">
+                <input type="text" class="form-control" numbersOnly [formControl]="goldRate"
+                    [class.isError]="goldRate.invalid && goldRate.touched">
+                <mat-error *ngIf="goldRate.invalid && goldRate.touched">Field required</mat-error>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4 kt-padding-10" *ngFor="let image of images;index as idx">
                 <div class="position-relative">
                     <span class="pos" (click)="delete(idx);">&times;</span>
                     <img [src]="image" *ngIf="image" class="w-100 div-height border-radius" (click)="upload(idx)">
                 </div>
             </div>
-            <div class="col-2 div-height">
+            <div class="col-2 div-height kt-padding-10">
                 <input type="file" accept="image/*" class="d-none" #file (change)="uploadImages($event)">
                 <button (click)="file.click()" class="img-add">+</button>
             </div>
         </div>
 
-
+        <kt-portlet-footer>
+                <div class="row text-center p-3">
+                        <div class="col-lg-12">
+                            <kt-button [type]="'button'" [value]="'Save'" [isDisabled]="isDisabled" (click)="save()">
+                            </kt-button>
+                        </div>
+                    </div>
+        </kt-portlet-footer>
 
     </kt-portlet-body>
 </kt-portlet>
