--- a/gold-admin-frontend/src/app/views/pages/user-management/partner/partner-list/partner-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/partner/partner-list/partner-list.component.html
@@ -113,7 +113,7 @@
             <mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
             <!-- MATERIAL PAGINATOR | Binded to dasources -->
             <!-- See off.documentations 'https://material.angular.io/components/paginator/overview' -->
-            <mat-paginator [pageSize]="10" [pageSizeOptions]="[3, 5, 10]" [length]="dataSource.paginatorTotal$ | async"
+            <mat-paginator [pageSize]="10" [pageSizeOptions]="[10,25,50,100]" [length]="dataSource.paginatorTotal$ | async"
                 [showFirstLastButtons]="true"></mat-paginator>
         </div>
         <!-- end: BOTTOM -->
